objects/Agreement_Party__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreement Parties</relationshipLabel>
        <relationshipName>Agreement_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Conditions_Monitored_By__c</fullName>
        <formula>Deal_Party__r.Conditions_Monitored_By__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditions Monitored By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Party__c</fullName>
        <label>Deal Party</label>
        <referenceTo>Deal_Party__c</referenceTo>
        <relationshipLabel>Agreement Parties</relationshipLabel>
        <relationshipName>Agreement_Parties</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalAgreementPartyId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalAgreementPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Amount__c</fullName>
        <label>Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Percentage__c</fullName>
        <label>Facility Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lender_Amount__c</fullName>
        <label>Lender Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lender_Percentage__c</fullName>
        <label>Lender Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <formula>TEXT(Deal_Party__r.Party_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Notification__c</fullName>
        <formula>Deal_Party__r.Conditions_Monitored_By__r.Receive_Notifications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receive Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Deal_Party__r.Relationship__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agreement Party</label>
    <nameField>
        <label>Agreement Party</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Parties</pluralLabel>
    <recordTypes>
        <fullName>Agreement_Counterparty_Legal</fullName>
        <active>true</active>
        <description>Multiple counter parties on an an Agreement document for Legal (LEAP) department</description>
        <label>Agreement Counterparty Legal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Specify_Lender_Portions_Only_for_Lenders</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Party_Type__c  &lt;&gt; &quot;Lender&quot;,
 OR (NOT(ISBLANK( Lender_Amount__c )),
 NOT(ISBLANK(  Lender_Percentage__c ))))</errorConditionFormula>
        <errorMessage>You may only specify a Facility Amount/Facility Percentage for a Lender.</errorMessage>
    </validationRules>
</CustomObject>